--- a/src/btnStyles.css
+++ b/src/btnStyles.css
@@ -27,3 +27,17 @@
     color: #000000;
     background-color: #FFFFFF;
 }
+
+#moreBtn{
+    cursor: pointer;
+    width: 240px;
+    height: 40px;
+    border-style: solid;
+    border-color: #D9D9D9;
+    border-radius: 90px;
+    font-size: 16px;
+    padding: 10px, 10px, 10px, 10px;
+    font-family: "Body/Font Family";
+    color: #1E1E1E;
+    background-color: #FFFFFF;
+}
